--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,14 +1,13 @@
 server:
   shutdown: graceful
 
-#spring:
-#  lifecycle:
-#    timeout-per-shutdown-phase: 30s
+spring:
+  lifecycle:
+    timeout-per-shutdown-phase: 40s
 
 management:
   endpoints:
     web:
-      #      base-path: "/"
       exposure:
         include: "*"
   endpoint:
