--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
-server:
-  shutdown: graceful
+#server:
+#  shutdown: graceful
 
 #spring:
 #  lifecycle:
@@ -8,7 +8,6 @@ server:
 management:
   endpoints:
     web:
-      #      base-path: "/"
       exposure:
         include: "*"
   endpoint:
