--- a/deployment-ver2-2.yaml
+++ b/deployment-ver2-2.yaml
@@ -12,7 +12,7 @@ spec:
       labels:
         app: k8s-demo-2-2
     spec:
-      terminationGracePeriodSeconds: 100  # terminationGracePeriodSeconds
+      terminationGracePeriodSeconds: 100
       containers:
         - name: k8s-demo-2-2
           image: jollygero/k8s-demo:2
@@ -23,7 +23,6 @@ spec:
           lifecycle:
             preStop:
               exec:
-#                command: [ "sh", "-c", "sleep 10" ]  #set pre-stop hook
                 command: [ "/bin/sh","-c","sleep 60" ]
 ---
 apiVersion: v1
