--- a/deployment-ver2.yaml
+++ b/deployment-ver2.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: k8s-demo-2
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
@@ -20,6 +20,18 @@ spec:
           ports:
             - name: k8s-demo-2
               containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
           lifecycle:
             preStop:
               exec:
