--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,3 +15,6 @@ management:
       enabled: true
     health:
       show-details: always
+      enabled: true
+      probes:
+        enabled: true
